--- a/SpinTheFish/animation.css
+++ b/SpinTheFish/animation.css
@@ -1,9 +1,18 @@
 @keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
     100% {
         transform: rotate(360deg);
     }
 }
 
-.spin {
-    animation: spin 1s 1;
+img {
+    width: 100%;
+    height: auto;
+}
+
+
+.spin-animation {
+    animation: spin 0.5s 1;
 }
