--- a/AnimalGenerator/styles.css
+++ b/AnimalGenerator/styles.css
@@ -1,3 +1,17 @@
+body {
+    background-color: rgb(54, 54, 54);
+}
+
+* {
+    font-family: monospace, Monaco;
+    color: whitesmoke;
+}
+
+button {
+    color: black;
+}
+
+
 @keyframes bounce {
     0% {
         transform: translateY(0);
