--- a/SpinTheFish/animation.css
+++ b/SpinTheFish/animation.css
@@ -1,3 +1,17 @@
+body {
+    background-color: rgb(54, 54, 54);
+}
+
+* {
+    font-family: monospace, Monaco;
+    color: whitesmoke;
+}
+
+button {
+    color: black;
+}
+
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
