--- a/SpinTheFish/animation.css
+++ b/SpinTheFish/animation.css
@@ -22,8 +22,11 @@ button {
 }
 
 img {
-    width: 100%;
+    width: 50%;
     height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
